# craftinginterpreters

./: .gitignore  Dockerfile  LICENSE  LOX_LANGUAGE_SPECIFICATIONS.md  Makefile  README.md  contents.txt  jlox  jvox  outline.md  research.txt  style.scss  two-column.scss  watch.sh
asset/: index.scss  style.scss
book/: a-bytecode-interpreter-in-c.md  a-bytecode-virtual-machine.md  a-map-of-the-territory.md  a-tree-walk-interpreter-in-java.md  a-tree-walk-interpreter.md  a-virtual-machine.md  acknowledgements.md  appendix-i.md  appendix-ii.md  backmatter.md  bytecode.md  calls-and-functions.md  chunks-of-bytecode.md  classes-and-instances.md  classes.md  closures.md  compiling-expressions.md  contents.md  control-flow.md  dedication.md  encore.md  evaluating-expressions.md  evaluating-trees.md  function-calls.md  functions.md  garbage-collection.md  global-variables.md  glossary.md  hash-tables.md  index.md  inheritance.md  introduction.md  jumping-back-and-forth.md  jumping-forward-and-back.md  local-variables.md  methods-and-initializers.md  optimization.md  parsing-expressions.md  performance.md  practice.md  (+23 more)
c/: CMakeLists.txt  Makefile  chunk.c  chunk.h  common.h  compiler.c  compiler.h  cvox.make  debug.c  debug.h  lexer.c  lexer.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
c/clox.xcodeproj/: project.pbxproj
c/clox.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
c/clox.xcodeproj/xcshareddata/xcschemes/: clox.xcscheme
c/cvox.xcodeproj/: project.pbxproj
example/: fib.vox
(+850 files in other folders)
